# JEPA-tol

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: research_notes.md
experiments/: train_ijepa.py  train_vjepa.py
src/jepa_tol/: __init__.py
src/jepa_tol/core/: __init__.py  encoder.py  predictor.py  temporal_encoder.py  world_model.py
src/jepa_tol/models/: __init__.py  base.py  video.py  vision.py
src/jepa_tol/tools/: __init__.py  classifier.py  representation_extractor.py  retriever.py  similarity_search.py  visualizer.py
tests/: test_jepa.py  test_tools.py  test_video.py
